--- a/src/components/AppCard.module.css
+++ b/src/components/AppCard.module.css
@@ -1,17 +1,6 @@
- .col {
-        width: 50%;
-        align-items: center;
-        justify-content: center;
-        height: 70vh;
-        
-      }
-.raw{
-    display: flex;
-    justify-content: center;
-    
-}
+ 
 .img{
-    height: 70%;
+    height: 400px;
     border-radius: 25px 25px 0 0 ;
     background-color: rgb(185, 185, 185);
     
